WIP start on converting sunrise and sunset utc times to local times based on location.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </form>
       <div id="weather"></div>
       <div id="sunrise"></div>
+      <div id="timezone"></div>
       <div id="sunset"></div>
       <div id="map"></div>
     </div>
